# ML_classification

./: .buildinfo  .flake8  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  Dockerfile  FUNCTIONS.md  LICENSE  Makefile  NOTES.md  README.md  TODO.md  advanced_usage.html  ai_arisha.py  api_reference.html  cli_usage.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: advanced_usage.doctree  api_reference.doctree  cli_usage.doctree  environment.pickle  index.doctree
_sources/: api_reference.rst.txt  cli_usage.rst.txt
binder/: environment.yml
data/: README.md
docs/: advanced_usage.rst  api_reference.rst  cli_usage.rst  conf.py  index.rst
notebooks/: README.md  advanced_demo.ipynb  loan_demo.ipynb
scripts/: download_data.py
src/: __init__.py  calibration.py  cv_utils.py  dataprep.py  diagnostics.py  diagnostics_stats.py  evaluate.py  evaluation_utils.py  fairness.py  feature_importance.py  features.py  manifest.py  metrics.py  pipeline_helpers.py  predict.py  preprocessing.py  report_helpers.py  reporting.py  selection.py  shap_utils.py  split.py  summary.py  train.py  utils.py
tests/: test_calibration.py  test_cart_gridsearch.py  test_cli_gboost_gridsearch.py  test_cli_manifest.py  test_cli_report.py  test_cli_sampler.py  test_cli_scripts.py  test_cli_train_gridsearch.py  test_cli_train_rf_gridsearch.py  test_cv_utils.py  test_dataprep.py  test_diagnostics.py  test_diagnostics_stats.py  test_download_data.py  test_evaluate.py  test_evaluate_extended.py  test_evaluation_utils.py  test_fairness.py  test_feature_importance.py  test_models.py  (+21 more)
(+9 files in other folders)
