[tool.black]
line-length = 88
extend-exclude = 'ai_arisha.py|scripts/download_data.py|src/dataprep.py|tests/test_.*.py'

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-classification"
version = "0.1.1"
description = "Loan-approval prediction pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ivan Starostin"}]
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "imbalanced-learn",
    "scipy",
    "statsmodels",
    "joblib",
    "kaggle",
]

[project.scripts]
mlcls-train = "src.train:main"
mlcls-eval = "src.evaluate:main"
mlcls-predict = "src.predict:main"
mlcls-report = "src.reporting:main"
mlcls-manifest = "src.manifest:main"
mlcls-summary = "src.summary:main"

[tool.setuptools]
packages = ["src", "scripts"]
package-dir = {"src" = "src", "scripts" = "scripts"}
